--- a/src/app/simulation/grid-settings/pathfinding-settings/pathfinding-settings.component.scss
+++ b/src/app/simulation/grid-settings/pathfinding-settings/pathfinding-settings.component.scss
@@ -1,4 +1,5 @@
 @use 'bulma/bulma' as bulma;
+@use 'colors';
 
 .button {
     border-radius: 0;
@@ -17,4 +18,48 @@ pre > code {
     white-space: pre;
     margin-top: -1em;
     display: block;
+}
+
+.radio {
+  display: flex;
+  align-items: center;
+  margin-top: 0.5rem;
+}
+
+
+body.dark :host label {
+  color: colors.$white-dark-87;
+}
+
+body.dark :host input[type="radio"] {
+  border: 0.15em solid colors.$white-dark-87;
+}
+
+input[type="radio"] {
+  appearance: none;
+  margin: 0 0.5rem 0 0;
+  font: inherit;
+  color: #1a0707;
+  width: 1.15em;
+  height: 1.15em;
+  border: 0.15em solid bulma.$dark;
+  border-radius: 50%;
+  transform: translateY(-0.075em);
+
+  display: grid;
+  place-content: center;
+}
+
+input[type="radio"]::before {
+  content: "";
+  width: 0.65EM;
+  height: 0.65em;
+  border-radius: 50%;
+  transform: scale(0);
+  transition: 120ms transform ease-in-out;
+  box-shadow: inset 1em 1em bulma.$danger;
+}
+
+input[type="radio"]:checked::before {
+  transform: scale(1);
 }
