--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,13 +78,14 @@
 
 $family-primary: 'Poppins';
 $family-serif: 'Poppins';
-$white-dark-87: hsl(0, 0%, 87%);
-$white-dark-60: hsl(0, 0%, 60%);
-$white-dark-38: hsl(0, 0%, 38%);
 
-$button-active-color: hsl(0, 72%, 45%);
-$button-focus-box-shadow-color: hsla(0, 0%, 100%, 0);
-$button-focus-box-shadow-color: hsla(0, 0%, 100%, 0);
+
+:root {
+  $button-active-color: hsl(0, 72%, 45%);
+  $button-focus-box-shadow-color: hsla(0, 0%, 100%, 0);
+  $button-focus-box-shadow-color: hsla(0, 0%, 100%, 0);
+}
+
 html,
 body {
     // background-image: linear-gradient(97deg, rgba(12, 223, 92, 0.2),rgba(91, 32, 246, 0.2)),linear-gradient(45deg, rgb(129, 201, 171),rgb(174, 228, 191),rgb(151, 214, 181),rgb(196, 241, 201),rgb(106, 188, 161),rgb(84, 175, 151),rgb(61, 161, 141),rgb(39, 148, 131));
